# core_pose_controller

./: CMakeLists.txt  README.md  package.xml
config/: pose_px4_gazebo_params.yaml  pose_px4_params.yaml
include/pose_controller/: pose_controller.h  pose_controller_node.h
launch/: pose_controller_gazebo.launch  pose_controller_params_only.launch  pose_controller_px4.launch
src/: odometry_to_pose_stamped.py  pose_controller.cpp  pose_controller_node.cpp
